# wiRedPanda

./: .gitattributes  .gitignore  .lgtm.yml  .markdownlint.json  .prettierignore  .prettierrc.mjs  .pylintrc  .qmlformat.ini  .qmllint.ini  .repomixignore  .stylelintrc.mjs  .tags  .travis.yml  404.html  404.md  ARDUINO_FIX_ANALYSIS.md  BUILD.md  BUILD_es.md  BUILD_pt_BR.md  CLAUDE.md  CMakeDebug.txt  CMakeLists.txt  CMakePresets.json  CMakeSources.cmake  CMakeUserPresets.json.example  CNAME  CONTRIBUTING.MD  CONTRIBUTING.md  DEPLOYMENT_OPTIONS.md  DEVELOPER_GUIDE.md  Doxyfile  Doxyfile.in  LICENSE  Latest.pro  README.md  README_es.md  README_pt_BR.md  TODO.md  VERILOG_VALIDATION_RESULTS.md  WPanda.pro  (+110 more)
App/QuickShell/: CMakeLists.txt  ChoiceDialog.qml  ElementEditor.qml  ElementPalette.qml  ICPreviewPopup.qml  Main.cpp  Main.qml  Minimap.qml  PaletteItemDelegate.qml  QuickFileDialog.qml  TextPromptDialog.qml  TruthTableDialog.qml
app/: BewavedDolphin.cpp  BewavedDolphin.h  CMakeLists.txt  LengthDialog.cpp  LengthDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  SimpleWaveForm.cpp  SimpleWaveForm.h  SimpleWaveForm.ui  app.pro  application.cpp  application.h  bewaveddolphin.cpp  bewaveddolphin.cpp.orig  bewaveddolphin.h  bewaveddolphin.ui  bewaveddolphin.ui.orig  bewaveddolphin_ui.cpp  bewaveddolphin_ui.h  box.cpp  box.h  boxfilehelper.cpp  boxfilehelper.h  boxmanager.cpp  boxmanager.h  boxmapping.cpp  boxmapping.h  boxnotfoundexception.cpp  boxnotfoundexception.h  boxprototype.cpp  boxprototype.h  boxprototypeimpl.cpp  boxprototypeimpl.h  boxwatcher.cpp  boxwatcher.h  clockDialog.cpp  clockDialog.h  (+143 more)
app/arduino/: codegenerator.cpp  codegenerator.h  improvedcodegenerator.cpp  improvedcodegenerator.h  templates.cpp  templates.h  testbench.cpp  testbench.h
app/bewaveddolphin/: bewaveddolphin.cpp  bewaveddolphin.h  bewaveddolphin_ui.cpp  bewaveddolphin_ui.h
app/codegen/: arduinocodegen.cpp  arduinocodegen.h
app/core/: application.cpp  application.h  common.cpp  common.h  enums.cpp  itemwithid.cpp  settings.cpp  settings.h  thememanager.cpp  thememanager.h
app/element/: CMakeLists.txt  and.cpp  and.h  audiobox.cpp  audiobox.h  buzzer.cpp  buzzer.h  clock.cpp  clock.h  demux.cpp  demux.h  dflipflop.cpp  dflipflop.h  display.cpp  display.h  display_14.cpp  display_14.h  display_16.cpp  display_7.cpp  display_7.h  dlatch.cpp  dlatch.h  element.pri  elementfactory.cpp  elementfactory.h  elementlabel.cpp  elementlabel.h  graphicelement.cpp  graphicelement.h  graphicelementinput.h  ic.cpp  ic.h  input.cpp  input.h  inputbutton.cpp  inputbutton.h  inputgnd.cpp  inputgnd.h  inputrotary.cpp  inputrotary.h  (+48 more)
app/examples/: display-4bits.panda
app/io/: recentfiles.cpp  recentfiles.h  serialization.cpp
app/logicelement/: CMakeLists.txt  logicand.cpp  logicand.h  logicdemux.cpp  logicdemux.h  logicdflipflop.cpp  logicdflipflop.h  logicdlatch.cpp  logicdlatch.h  logicelement.pri  logicinput.cpp  logicinput.h  logicjkflipflop.cpp  logicjkflipflop.h  logicmux.cpp  logicmux.h  logicnand.cpp  logicnand.h  logicnode.cpp  logicnode.h  logicnone.cpp  logicnone.h  logicnor.cpp  logicnor.h  logicnot.cpp  logicnot.h  logicor.cpp  logicor.h  logicoutput.cpp  logicoutput.h  logicremote.cpp  logicremote.h  logicremotedevice.cpp  logicremotedevice.h  logicsrflipflop.cpp  logicsrflipflop.h  logicsrlatch.cpp  logicsrlatch.h  logictflipflop.cpp  logictflipflop.h  (+6 more)
app/nodes/: main.cpp  physicalconnection.cpp  physicalconnection.h  qneblock.cpp  qneblock.h  qneconnection.cpp  qneconnection.h  qnemainwindow.cpp  qnemainwindow.h  qneport.cpp  qneport.h  qnodeseditor.cpp  qnodeseditor.pro  wirelessconnection.cpp  wirelessconnection.h
app/resources/: convertIcons.sh  postinst  resources.qrc  translations.qrc  wpanda-mime.xml  wpanda.desktop  wpanda.sh  wpanda_en.qm  wpanda_en.ts  wpanda_pt.qm  wpanda_pt.ts  wpanda_pt_BR.qm  wpanda_pt_BR.ts
app/scene/: commands.cpp  commands.h  graphicsview.cpp  graphicsview.h  scene.cpp  scene.h  workspace.cpp  workspace.h
app/settings/: WPandaSettings.kcfgc  wpanda.kcfg
app/simulation/: elementmapping.cpp  elementmapping.h  simulation.cpp  simulation.h  simulationblocker.cpp  simulationblocker.h
app/ui/: clockdialog.cpp  clockdialog.h  clockdialog_ui.cpp  clockdialog_ui.h  elementeditor.cpp  elementeditor.h  elementeditor_ui.cpp  elementeditor_ui.h  labeledslider.cpp  labeledslider.h  lengthdialog.cpp  lengthdialog.h  lengthdialog_ui.cpp  lengthdialog_ui.h  mainwindow.cpp  mainwindow.h  mainwindow_ui.cpp  mainwindow_ui.h  trashbutton.cpp  trashbutton.h
app/verilog/: codegeneratorverilog.cpp  codegeneratorverilog.h
test/: ARDUINO_REGRESSION_TESTING.md  CMakeLists.txt  main.cpp  runCoverage.sh  test.pro  testapplication.cpp  testapplication.h  testapplication_extended.cpp  testapplication_extended.h  testarduino.cpp  testarduino.h  testcircuitintegration.cpp  testcircuitintegration.h  testclockdialog.cpp  testclockdialog.h  testcommands.cpp  testcommands.h  testcommands_advanced.cpp  testcommands_advanced.h  testcommon.cpp  testcommon.h  testconnectionnetwork.cpp  testconnectionnetwork.h  testdialogs.cpp  testdialogs.h  testdragdrop.cpp  testdragdrop.h  testelementeditor.cpp  testelementeditor.h  testelementfactory.cpp  testelementfactory.h  testelementlabel.cpp  testelementlabel.h  testelementmapping.cpp  testelementmapping.h  testelements.cpp  testelements.h  testenums.cpp  testenums.h  testerrorhandling.cpp  (+80 more)
test/.qmake2cmake/: subdir-of
test/arduino/: README.md  counter.ino  counter_setup.md  decoder.ino  dflipflop-masterslave.ino  dflipflop.ino  dflipflop2.ino  dflipflop_setup.md  dflipflop_tinkercad.json  display-3bits-counter.ino  display-3bits-counter_tinkercad.json  display-3bits.ino  display-4bits-counter.ino  display-4bits-counter_tinkercad.json  display-4bits.ino  display-4bits_setup.md  dlatch.ino  dlatch.panda  dlatch_setup.md  generate_tinkercad_setup.py  ic.ino  ic_setup.md  input.ino  jkflipflop.ino  jkflipflop_setup.md  jkflipflop_tinkercad.json  notes.ino  notes_setup.md  register.ino  sequential.ino  sequential_setup.md  (+7 more)
(+2795 files in other folders)
